# FOIA_Bias_Analysis

./: .gitignore  LICENSE  README.md  config.json  config.yaml  main.py  pyproject.toml  requirements.txt
foia_bias/: __init__.py  pipeline.py
foia_bias/analysis/: aggregate.py  models.py
foia_bias/data_sources/: base.py  foia_gov_client.py  logs_downloader.py  muckrock_client.py  reading_rooms.py
foia_bias/llm/: classifiers.py  client.py  prefilter_classifier.py  prompts.py
foia_bias/processing/: admin_mapping.py  deduplication.py  politics_filter.py  text_extraction.py
foia_bias/utils/: checkpoints.py  config_loader.py  logging_utils.py
sample_data/agency_logs/: doj_log_sample.csv  state_log_sample.csv
